<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/barParentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/barNewsLayout"
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/barNewsText"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/tab_news"
            android:textColor="@color/white"
            android:textSize="@dimen/action_bar_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/barNewsUnderLine"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/white"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barDividerLine1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/actionBarDivider"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/barEventsLayout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/barEventsText"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/tab_events"
            android:textColor="@color/white"
            android:textSize="@dimen/action_bar_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/barEventsUnderLine"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/transparent"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barDividerLine2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/actionBarDivider"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/barNewAppLayout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout 
             android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1">
        
        <TextView
            android:id="@+id/barNewAppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/tab_new_app"
            android:textColor="@color/white"
            android:textSize="@dimen/action_bar_text_size"
            android:textStyle="bold" />

 <ImageView
     android:id="@+id/bubleNewApp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:src="@drawable/ic_buble_white"
     android:visibility="gone" />

</LinearLayout>
        <LinearLayout
            android:id="@+id/barNewAppUnderLine"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/transparent"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>